Configure webpack to compile for github pages
Remove './dist' folder and update webpack.config.js to bundle files in
the root folder for the repository. Update index.html and index.js paths
to account for changing file structure.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack",
     "watch": "webpack --progress --watch",
-    "start": "open-cli dist/index.html"
+    "start": "open-cli index.html"
   },
   "repository": {
     "type": "git",
